--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -92,46 +92,46 @@
             <div class="container">
 
               <div class="row">
-                <div class="col-md-6 col-lg-4 d-flex col-xs-12 align-items-stretch" data-aos="fade-up">
+                <div class="col-md-6 col-lg-4 d-flex col-xs-12 " data-aos="fade-up">
                   <div class="icon-box icon-box-pink">
                     <div class="icon"><i class="fa-solid fa-location-dot"></i></div>
                     <h4 class="title"><a href="">GEO</a></h4>
-                    <ul class="footer-links">
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>Diagnóstico de Daño de Formación</li>
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>Ingeniería Conceptual - Detalle en Manejo de Aguas de Formación para el Reúso Benéfico</li>
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>Valoración de Incidentes Ambientales</li>
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>Ingeniería Conceptual - Detalle para Fuente Solar</li>
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>Modelación Mecánica de Fluidos Computación en Proyectos de Hidrogeneración</li>
-                      <li><i class="fa-regular fa-circle-check text-danger"></i>LoT Aplicado a la Gestión de Energía</li>
+                    <ul class="align-items-start footer-links box-content">
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> Diagnóstico de Daño de Formación</li>
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> Ingeniería Conceptual - Detalle en Manejo de Aguas de Formación para el Reúso Benéfico</li>
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> Valoración de Incidentes Ambientales</li>
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> Ingeniería Conceptual - Detalle para Fuente Solar</li>
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> Modelación Mecánica de Fluidos Computación en Proyectos de Hidrogeneración</li>
+                      <li><i class="fa-regular fa-circle-check text-danger"></i> LoT Aplicado a la Gestión de Energía</li>
                     </ul>
                   </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 col-xs-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-md-6 col-lg-4 col-xs-12 d-flex " data-aos="fade-up" data-aos-delay="100">
                   <div class="icon-box icon-box-cyan">
                     <div class="icon"><i class="fa-solid fa-tractor"></i></i></div>
                     <h4 class="title"><a href="">AGRO</a></h4>
-                    <ul class="footer-links">
-                      <li><i class="fa-regular fa-circle-check text-primary"></i>Agricultura de Precisión Agual - Suelo - Planta</li>
-                      <li><i class="fa-regular fa-circle-check text-primary"></i>Estudios de Suelos Enfoque Salud del Suelo</li>
-                      <li><i class="fa-regular fa-circle-check text-primary"></i>Estudios de Ecofisiología con Enfoque de Respuesta del Sistema Productivo con Técnicas de Sensórica de Campo y Remotas</li>
-                      <li><i class="fa-regular fa-circle-check text-primary"></i>Estudio, Modelación e Integración de Variables Agroclimáticas en Sistemas Productivos</li>
-                      <li><i class="fa-regular fa-circle-check text-primary"></i>Desarrollo de Sistemas LoT + BigData + SSTID</li>
+                    <ul class="align-items-start footer-links box-content">
+                      <li><i class="fa-regular fa-circle-check text-primary"></i> Agricultura de Precisión Agual - Suelo - Planta</li>
+                      <li><i class="fa-regular fa-circle-check text-primary"></i> Estudios de Suelos Enfoque Salud del Suelo</li>
+                      <li><i class="fa-regular fa-circle-check text-primary"></i> Estudios de Ecofisiología con Enfoque de Respuesta del Sistema Productivo con Técnicas de Sensórica de Campo y Remotas</li>
+                      <li><i class="fa-regular fa-circle-check text-primary"></i> Estudio, Modelación e Integración de Variables Agroclimáticas en Sistemas Productivos</li>
+                      <li><i class="fa-regular fa-circle-check text-primary"></i> Desarrollo de Sistemas LoT + BigData + SSTID</li>
                     </ul>
                   </div>
                 </div>
 
-                <div class="col-md-6 col-lg-4 col-xs-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-6 col-lg-4 col-xs-12 d-flex " data-aos="fade-up" data-aos-delay="200">
                   <div class="icon-box icon-box-green">
-                    <div class="icon"><i class="fa-brands fa-envira"></i></div>
+                    <div class="icon"><i class="fa-brands fa-envira"></i> </div>
                     <h4 class="title"><a href="">AMBIENTE</a></h4>
-                    <ul class="footer-links">
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Estudios Ambientales</li>
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Gestión Integaral del Recurso Hídrico</li>
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Hidroinformática</li>
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Ecohidráulica y Ecohidrología</li>
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Modelación de la Calidad del Agua</li>
-                      <li><i class="fa-regular fa-circle-check text-success"></i>Sistemas de Tratamiento de</li>
+                    <ul class="align-items-start footer-links box-content">
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Estudios Ambientales</li>
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Gestión Integaral del Recurso Hídrico</li>
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Hidroinformática</li>
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Ecohidráulica y Ecohidrología</li>
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Modelación de la Calidad del Agua</li>
+                      <li><i class="fa-regular fa-circle-check text-success"></i> Sistemas de Tratamiento de</li>
                     </ul>
                   </div>
                 </div>
@@ -164,7 +164,7 @@
                         campo. Sus Facilidades tecnológicas
                         permiten:
                     </p>
-                    <ul>
+                    <div class="align-items-start">
                         <li><i class="bi bi-check2-circle"></i> Determinar Parámetros de Calidad de Agua</li>
                         <li><i class="bi bi-check2-circle"></i> Diagnosticar en primera aproximación incidentes ambientales.</li>
                         <li><i class="bi bi-check2-circle"></i> Valorar recurso suelo.
@@ -172,7 +172,7 @@
                         <li>Generar Planes de Fertilización – Tecnología SMART FERTILIZER.
                         </li>
                         <li>Toma de Muestras de Matrices Agua – Suelo – Planta.</li>
-                    </ul>
+                      </div>
                     
                     </div>
                 </div>
