--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -1260,7 +1260,7 @@
         </svg>
 
 
-    <div class="name-container">
+    <div class="name-container justify-content-center">
         <div class="logo-name">Ideas para un Desarrollo Sustentable</div>
     </div>
 </div>
