--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -15,9 +15,6 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/investigadores.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    
-    <!-- <link rel="stylesheet" href="../assets/css/Style.css"> -->
     <title>Investigadores</title>
 </head>
 <body>
@@ -125,8 +122,8 @@
                   
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-envelope"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -140,8 +137,8 @@
                   <span>Full-stack developer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-envelope"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -155,8 +152,8 @@
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-envelope"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -170,8 +167,8 @@
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
-                    <a href=""><i class="fa-solid fa-envelope"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                   </div>
                 </div>
               </div>
@@ -224,9 +221,7 @@
         </div>
   </footer>
 
-
-
-    <!-- Large modal -->
+  <!-- Large modal -->
   <button type="button" class="btn-wsp" data-toggle="modal" data-target=".bd-example-modal-lg"><i class="fa-brands fa-whatsapp"></i></button>
 
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
