--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../assets/css/proyectos.css">
 
     <!--CSS-->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <!-- <link rel="stylesheet" href="../assets/css/style.css"> -->
 </head>
 <body>
 
