--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -54,7 +54,7 @@
               <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
               <li><a href="#"><span>CteI</span></a></li>
               <li><a href="./academics.html"><span>Academics</span></a></li>
-              <li><a href="#"><span>Servicios</span></a></li>
+              <li><a href="./servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
         </div>
