--- a/pages/academics.html
+++ b/pages/academics.html
@@ -221,7 +221,7 @@
             <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
             <li><a href="./pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
             <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-            <li><a href="./pages/investigadores.html">Investigadores</li>
+            <li><li href="./pages/investigadores.html">Investigadores</li>
             <li><a href="./pages/pasantes.html">Pasantes</a></li>
           </ul>
         </div>
