--- a/pages/pasantes.html
+++ b/pages/pasantes.html
@@ -110,6 +110,21 @@
         </div>
       </section><!-- End Why Us Section -->
 
+
+        <div class="container-intern rounded-top">
+        <div class="row d-flex justify-content-center">
+        <div class="four col-md-2">
+          <div class="counter-box colored">
+            <i class="fa fa-user-group"></i>
+            <span class="counter">10</span>
+            <p>Pasantes</p>
+          </div>
+        </div>
+        </div>	
+        </div>
+
+
+
       <section id="team" class="team section-bg">
 
         <div class="container">
@@ -177,17 +192,6 @@
           </div>
         </div>
 
-        <div class="container-intern rounded-top">
-        <div class="row d-flex justify-content-end">
-        <div class="four col-md-2">
-          <div class="counter-box colored">
-            <i class="fa fa-user-group"></i>
-            <span class="counter">10</span>
-            <p>Pasantes</p>
-          </div>
-        </div>
-        </div>	
-        </div>
 
       </section>
   </main>
