logo cenigaa modal

--- a/pages/pasantes.html
+++ b/pages/pasantes.html
@@ -111,19 +111,17 @@
       </section><!-- End Why Us Section -->
 
 
-        <div class="container-intern rounded-top">
+      <div class="container-intern">
         <div class="row d-flex justify-content-center">
         <div class="four col-md-2">
-          <div class="counter-box colored">
+          <div class="counter-box colored rounded">
             <i class="fa fa-user-group"></i>
             <span class="counter">10</span>
             <p>Pasantes</p>
           </div>
-        </div>
+          </div>
         </div>	
-        </div>
-
-
+      </div>
 
       <section id="team" class="team section-bg">
 
