--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
      <div class="modal-dialog modal-dialog-centered modal-lg">
        <div class="modal-content fondo-cenigaa text-light">
          <div class="container text-center">
-           <div class="title text-success mb-4"><h2>Contactos Coorporativos</h2>
-            <img src="../assets/img/logo-cenigaa.png" alt="" width="50" style="width: 10%; height: 10%;">
+          <div class="title text-success d-block mb-4"><h2>Contactos Coorporativos</h2>
+            <img src="../assets/img/logo-cenigaa.png" alt="" width="80">
           </div>
            <div class="row">
              <div class="col">
