--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -46,7 +46,7 @@
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
               <li><a href="../index.html"><span>Inicio</span></a></li>
               <li class="has-children">
-                <a href="about.html"><span>Personal</span></a>
+                <a href="./nosotros.html"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
                   <li><a href="./investigadores.html">Investigadores</a></li>
                   <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
@@ -748,7 +748,7 @@
             <div class="box">
               <h2>Enlaces de Ínteres</h2>
               <ul class="footer-links">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="./calificacionESAL.html">Proceso de calificación ESAL</a></li>
                 <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
                 <li><a href="./investigadores.html">Investigadores</li>
