cambios minimos - Academics

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <div class="box">
             <figure>
                 <a href="#">
-                    <img src="../assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
+                    <img src="./assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
                 </a>
             </figure>
         </div>
