--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -227,7 +227,7 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <a href="https://api.whatsapp.com/send?phone=57316 4739816&text=Hola Jorge. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
+                          <a href="https://api.whatsapp.com/send?phone=573044692423&text=Hola Camilo. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
                             <i class="fa-brands fa-whatsapp"></i> Conocer más de la unidad
                           </a>
                         </div>
@@ -317,7 +317,7 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <a href="https://api.whatsapp.com/send?phone=57316 4739816&text=Hola Jorge. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
+                          <a href="https://api.whatsapp.com/send?phone=573023734600&text=Hola Andres. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
                             <i class="fa-brands fa-whatsapp"></i> Conocer más de la unidad
                           </a>
                         </div>
@@ -448,7 +448,7 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <a href="https://api.whatsapp.com/send?phone=57316 4739816&text=Hola Jorge. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
+                          <a href="https://api.whatsapp.com/send?phone=573183835436&text=Hola Jhon. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
                             <i class="fa-brands fa-whatsapp"></i> Conocer más de la unidad
                           </a>
                         </div>
@@ -657,7 +657,7 @@
                           </div>
                         </div>
                         <div class="modal-footer">
-                          <a href="https://api.whatsapp.com/send?phone=57316 4739816&text=Hola Jorge. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
+                          <a href="https://api.whatsapp.com/send?phone=573183835434&text=Hola Amalia. Me interesa conocer más acerca de " target="_blank" style="color: rgb(253, 251, 251);" class="btn btn-success">
                             <i class="fa-brands fa-whatsapp"></i> Conocer más de la unidad
                           </a>
                         </div>
