--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -6,12 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
-
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/califiaciónESAL.css">
     <title>Proceso de calificacion ESAL</title>
@@ -34,9 +32,9 @@
               <nav class="site-navigation position-relative text-right" role="navigation">
     
                 <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                  <li><a href="/index.html"><span>Inicio</span></a></li>
+                  <li><a href="../index.html"><span>Inicio</span></a></li>
                   <li class="has-children">
-                    <a href="about.html"><span>Personal</span></a>
+                    <a href="#"><span>Personal</span></a>
                     <ul class="dropdown arrow-top">
                       <li><a href="./investigadores.html">Investigadores</a></li>
                       <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
@@ -46,7 +44,7 @@
                   <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
                   <li><a href="#"><span>CteI</span></a></li>
                   <li><a href="./academics.html"><span>Academics</span></a></li>
-                  <li><a href="#"><span>Servicios</span></a></li>
+                  <li><a href="./servicios.html"><span>Servicios</span></a></li>
                 </ul>
               </nav>
             </div>
@@ -197,9 +195,9 @@
           <div class="box">
             <h2>Contáctenos</h2>
             <ul class="footer-links">
-              <li><a href="./nosotros.html">Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso., Neiva, Colombia.</a></li>
-              <li><a href="./calificacionESAL.html">info@cenigaa.org </a></li>
-              <li><a href="#">3183835434</a></li>
+              <li><p>Calle 8 No. 32-49 Universidad CORHUILA Prado Alto, Edificio de Laboratorios 4° piso, Neiva, Colombia.</p></li>
+              <li><p>info@cenigaa.org </p></li>
+              <li><p>3183835434</p></li>
             </ul>
           </div>
           <div class="box">
