--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <div class="grupo-1">
         <div class="box">
             <figure>
-                <a href="#">
+                <a href="./index.html">
                     <img src="./assets/svg/Cenigaa.svg" alt="Logo Cenigaa">
                 </a>
             </figure>
