--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </ul>
               </li>
               <li><a href="./pages/proyectos.html"><span>Proyectos</span></a></li>
-              <li><a href="#"><span>CteI</span></a></li>
+              <li><a href="./pages/CteI.html"><span>CteI</span></a></li>
               <li><a href="./pages/academics.html"><span>Academics</span></a></li>
               <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
             </ul>
