menu modulo esal

--- a/pages/academics.html
+++ b/pages/academics.html
@@ -50,7 +50,7 @@
                             </ul>
                         </li>
                             <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
-                            <li><a href="#"><span>CteI</span></a></li>
+                            <li><a href="./CteI.html"><span>CteI</span></a></li>
                             <li><a href="./academics.html"><span>Academics</span></a></li>
                             <li><a href="./servicios.html"><span>Servicios</span></a></li>
                     </ul>
