--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -18,6 +18,15 @@
 </head>
 <body>
 
+    <div class="site-mobile-menu">
+    <div class="site-mobile-menu-header">
+        <div class="site-mobile-menu-close mt-3">
+            <span class="icon-close2 js-menu-toggle"></span>
+        </div>
+    </div>
+    <div class="site-mobile-menu-body"></div>
+    </div>
+
     <header class="site-navbar" role="banner">
 
         <div class="container">
@@ -44,7 +53,7 @@
                     </ul>
                   </li>
                   <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
-                  <li><a href="#"><span>CteI</span></a></li>
+                  <li><a href="./CteI.html"><span>CteI</span></a></li>
                   <li><a href="./academics.html"><span>Academics</span></a></li>
                   <li><a href="./servicios.html"><span>Servicios</span></a></li>
                 </ul>
