--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -48,7 +48,7 @@
                             </ul>
                         </li>
                         <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
-                        <li><a href="#"><span>CteI</span></a></li>
+                        <li><a href="./CteI.html"><span>CteI</span></a></li>
                         <li><a href="./academics.html"><span>Academics</span></a></li>
                         <li><a href="./servicios.html"><span>Servicios</span></a></li>
                         </ul>
@@ -65,7 +65,7 @@
 
     <section class="home" id="home">
         <div class="home-text container">
-            <h2 class="home-title">Cenigaa Blogger</h2>
+            <h2 class="home-title">Cenigaa Projects</h2>
             <span class="home-subtitle">Ideas para un Desarrollo Sustentable</span>
         </div>
     </section>
