--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
   </div>
   
   <header class="site-navbar" role="banner">
-
     <div class="container">
       <div class="row align-items-center">
-        
         <div class="col-11 col-xl-2">
           <h1 class="mb-0 site-logo">
             <a href="./index.html" class="text-white mb-0">
@@ -38,9 +36,8 @@
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
-
             <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-              <li class="active"><a href="./index.html"><span>Inicio</span></a></li>
+              <li><a href="./index.html"><span>Inicio</span></a></li>
               <li class="has-children">
                 <a href="#"><span>Personal</span></a>
                 <ul class="dropdown arrow-top">
@@ -60,9 +57,7 @@
           <a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
         </div>
         </div>
-      </div>
     </div>
-    
   </header>
 
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -73,24 +68,24 @@
       </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2014/09/19/19/13/cocoa-452911_1280.jpg" alt="First slide">
+          <img class="d-block w-100 img-fluid" src="https://cdn.pixabay.com/photo/2014/09/19/19/13/cocoa-452911_1280.jpg" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text one</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
       </div>
     <div class="carousel-item">
           <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/06/23/03/26/coffee-grains-1474601_1280.jpg" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text two</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
     </div>
     <div class="carousel-item">
           <img class="d-block w-100" src="https://wallpapers.com/images/high/indoor-farm-growing-seedling-sprouts-35scg0htd1p9w5ec.webp" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text three</h5>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
     </div>
     </div>
@@ -372,7 +367,7 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 <script src="./assets/js/main.js"></script>
 <script src="./assets/js/jquery-3.3.1.min.js"></script>
 <script src="./assets/js/popper.min.js"></script>
