--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
       </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100 img-fluid" src="https://cdn.pixabay.com/photo/2014/09/19/19/13/cocoa-452911_1280.jpg" alt="First slide">
+          <img class="d-block w-100 img-fluid" src="./assets/img/cocoa.png" alt="First slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text one</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
       </div>
     <div class="carousel-item">
-          <img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/06/23/03/26/coffee-grains-1474601_1280.jpg" alt="Second slide">
+          <img class="d-block w-100" src="./assets/img/coffee-grains.png" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text two</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
     </div>
     <div class="carousel-item">
-          <img class="d-block w-100" src="https://wallpapers.com/images/high/indoor-farm-growing-seedling-sprouts-35scg0htd1p9w5ec.webp" alt="Third slide">
+          <img class="d-block w-100" src="./assets/img/ground.png" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
             <h5>Banner Text three</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
