resize carousel-slide y efecto texto

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block w-100 img-fluid" src="./assets/img/cocoa.png" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-md-block fade-in-text">
             <h5>Banner Text one</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, nulla, tempore. Deserunt excepturi quas vero.</p>
           </div>
@@ -367,8 +367,8 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
 <script src="./assets/js/main.js"></script>
+<script src="./assets/js/animation-text.js"></script>
 <script src="./assets/js/jquery-3.3.1.min.js"></script>
 <script src="./assets/js/popper.min.js"></script>
 <script src="./assets/js/bootstrap.min.js"></script>
