--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/califiaciónESAL.css">
