--- a/index.html
+++ b/index.html
@@ -46,9 +46,15 @@
                   <li><a href="./pages/pasantes.html">Pasantes</a></li>
                 </ul>
               </li>
-              <li><a href="./pages/proyectos.html"><span>Proyectos</span></a></li>
-              <li><a href="./pages/CteI.html"><span>CteI</span></a></li>
-              <li><a href="./pages/academics.html"><span>Academics</span></a></li>
+              <li class="has-children">
+                <a href="#"><span>CTeI</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="./pages/proyectos.html">I+D+i</a></li>
+                  <li><a href="./pages/academics.html">Academics</a></li>
+                  <li><a href="./pages/pasantes.html">Innovación</a></li>
+                  <li><a href="./pages/pasantes.html">INTECC</a></li>
+                </ul>
+              </li>
               <li><a href="./pages/servicios.html"><span>Servicios</span></a></li>
             </ul>
           </nav>
