--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <link rel="shortcut icon" href="./assets/img/logo-cenigaa.ico">
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/proyectos.css">
     <title>Cenigaa Blog</title>
