--- a/pages/pasantes.html
+++ b/pages/pasantes.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
-    <link rel="shortcut icon" href="./assets/img/logo-cenigaa.ico">
+    <link rel="shortcut icon" href="../assets/img/logo-cenigaa.ico">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--CSS-->
