--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -177,7 +177,7 @@
                                   de los sistemas
                               </P>
                               <div class="row">
-                                  <div class="col">
+                                  <div class="col m-3">
                                       <h5>Aplicación AGRO - Agricultura de precisión en:</h5>
                                       <ul>
                                           <li>Fenotipado</li>
@@ -690,12 +690,14 @@
                                 <img src="../assets/img/intecc.jpg" alt="" style="width: 100%;">
                               </div>
                               <hr>
-                              <ul>
+                              <div class="p-5">
+                                <ul>
                                   <li>Vigilancia Tecnológica</li>
                                   <li>Inteligencia Competitiva</li>
                                   <li>Benchmarking</li>
                                   <li>Gestión de Conocimiento</li>
                               </ul>
+                              </div>
                             </div>
                           </div>
                         </div>
