--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -343,11 +343,11 @@
         <div class="box">
           <h2>Enlaces de Ínteres</h2>
           <ul class="footer-links">
-            <li><a href="./pages/nosotros.html">Sobre nosotros</a></li>
-            <li><a href="./pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
-            <li><a href="./pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-            <li><a href="./pages/investigadores.html">Investigadores</li>
-            <li><a href="./pages/pasantes.html">Pasantes</a></li>
+            <li><a href="./nosotros.html">Sobre nosotros</a></li>
+            <li><a href="./calificacionESAL.html">Proceso de calificación ESAL</a></li>
+            <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+            <li><a href="./investigadores.html">Investigadores</li>
+            <li><a href="./pasantes.html">Pasantes</a></li>
           </ul>
         </div>
         <div class="box">
