--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -26,43 +26,47 @@
     <div class="site-mobile-menu-body"></div>
   </div>
 
-    <header class="site-navbar" role="banner">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-11 col-xl-2">
-            <h1 class="mb-0 site-logo">
-            <a href="../index.html" class="text-black-50 mb-0">
+  <header class="site-navbar" role="banner">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-11 col-xl-2">
+          <h1 class="mb-0 site-logo">
+            <a href="../index.html" class="text-white mb-0">
               <img src="../assets/svg/Cenigaa.svg" width="100px" height="100px" alt="">
             </a>
           </h1>
-          </div>
-          <div class="col-12 col-md-10 d-none d-xl-block">
-            <nav class="site-navigation position-relative text-right" role="navigation">
-              <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-                <li><a href="../index.html"><span>Inicio</span></a></li>
-                <li class="has-children">
-                  <a href="#"><span>Personal</span></a>
-                  <ul class="dropdown arrow-top">
-                    <li><a href="./investigadores.html">Investigadores</a></li>
-                    <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                    <li><a href="./pasantes.html">Pasantes</a></li>
-                  </ul>
-                </li>
-                <li><a href="./proyectos.html"><span>Proyectos</span></a></li>
-                <li><a href="./CteI.html"><span>CteI</span></a></li>
-                <li><a href="./academics.html"><span>Academics</span></a></li>
-                <li><a href="./servicios.html"><span>Servicios</span></a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px; color: #000;">
-            <a href="#" class="site-menu-toggle js-menu-toggle">
-              <span class="icon-menu h3"></span>
-            </a>
-          </div>
         </div>
-      </div>
-    </header>
+        <div class="col-12 col-md-10 d-none d-xl-block">
+          <nav class="site-navigation position-relative text-right" role="navigation">
+            <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
+              <li><a href="../index.html"><span>Inicio</span></a></li>
+              <li class="has-children">
+                <a href="#"><span>Personal</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="../pages/investigadores.html">Investigadores</a></li>
+                  <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                  <li><a href="../pages/pasantes.html">Pasantes</a></li>
+                </ul>
+              </li>
+              <li class="has-children">
+                <a href="../pages/CteI.html"><span>CTeI</span></a>
+                <ul class="dropdown arrow-top">
+                  <li><a href="../pages/proyectos.html">I+D+i</a></li>
+                  <li><a href="../pages/academics.html">Academics</a></li>
+                  <li><a href="../pages/pasantes.html">Innovación</a></li>
+                  <li><a href="../pages/pasantes.html">INTECC</a></li>
+                </ul>
+              </li>
+              <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
+          <a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
+        </div>
+        </div>
+    </div>
+  </header>
 
     <main id="main">
       <!-- ======= Why Us Section ======= -->
@@ -325,10 +329,10 @@
               <h2>Enlaces de Ínteres</h2>
               <ul class="footer-links">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="./calificacionESAL.html">Proceso de calificación ESAL</a></li>
-                <li><a href="./jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
-                <li><a href="./investigadores.html">Investigadores</li>
-                <li><a href="./pasantes.html">Pasantes</a></li>
+                <li><a href="../pages/calificacionESAL.html">Proceso de calificación ESAL</a></li>
+                <li><a href="../pages/jovenesInvestigadores.html">Jóvenes Investigadores</a></li>
+                <li><a href="../pages/investigadores.html">Investigadores</li>
+                <li><a href="../pages/pasantes.html">Pasantes</a></li>
               </ul>
             </div>
             <div class="box">
