cabios minimos en css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </ul>
               </li>
               <li class="has-children">
-                <a href="#"><span>CTeI</span></a>
+                <a href="./pages/CteI.html"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
                   <li><a href="./pages/proyectos.html">I+D+i</a></li>
                   <li><a href="./pages/academics.html">Academics</a></li>
