navbar hipervinculs CTeI

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                 <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
                   <li><a href="./pages/proyectos.html">I+D+i</a></li>
-                  <li><a href="./pages/academics.html">Academics</a></li>
-                  <li><a href="./pages/pasantes.html">Innovación</a></li>
+                  <li><a href="./pages/academics.html">Academics for Scientist</a></li>
+                  <li><a href="./pages/pasantes.html">Innovación Exponencial</a></li>
                   <li><a href="./pages/pasantes.html">INTECC</a></li>
                 </ul>
               </li>
@@ -372,13 +372,13 @@
         });
   </script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script src="./assets/js/main.js"></script>
-<script src="./assets/js/animation-text.js"></script>
-<script src="./assets/js/jquery-3.3.1.min.js"></script>
-<script src="./assets/js/popper.min.js"></script>
-<script src="./assets/js/bootstrap.min.js"></script>
-<script src="./assets/js/jquery.sticky.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/animation-text.js"></script>
+  <script src="./assets/js/jquery-3.3.1.min.js"></script>
+  <script src="./assets/js/popper.min.js"></script>
+  <script src="./assets/js/bootstrap.min.js"></script>
+  <script src="./assets/js/jquery.sticky.js"></script>
 </body>
 </html>
