--- a/pages/calificacionESAL.html
+++ b/pages/calificacionESAL.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
-    <link rel="shortcut icon" href="./assets/img/logo-cenigaa.ico">
+    <link rel="shortcut icon" href="../assets/img/logo-cenigaa.ico">
     <!-- Bootstrap CSS -->
-<<<<<<< HEAD
+
 
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
 
 
-=======
-    <link rel="stylesheet" href="../assets//css/bootstrap.min.css">
->>>>>>> 086785adafb71e607667c0b79dbca43962d72f33
+
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/califiaciónESAL.css">
