--- a/pages/investigadores.html
+++ b/pages/investigadores.html
@@ -63,7 +63,7 @@
           </nav>
         </div>
         <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;">
-          <a href="#" class="site-menu-toggle js-menu-toggle text-white"><span class="icon-menu h3"></span></a>
+          <a href="#" class="site-menu-toggle js-menu-toggle text-dark"><span class="icon-menu h3"></span></a>
         </div>
         </div>
     </div>
@@ -108,7 +108,7 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>James</h4>
+                  <h4>Andres Palacios</h4>
                   <span>Chief Executive Officer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
@@ -123,7 +123,7 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Benjamin</h4>
+                  <h4>Jorge Chavarro</h4>
                   <span>Full-stack developer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
@@ -138,7 +138,7 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-6.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Amelia</h4>
+                  <h4>Amalia Molina</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
@@ -153,7 +153,7 @@
               <div class="member d-flex align-items-start" >
                 <div class="teampic"><img src="../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
                 <div class="member-info">
-                  <h4>Charlotte</h4>
+                  <h4>Jhon Chavarro</h4>
                   <span>Senior software engineer</span>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ducimus.</p>
                   <div class="social">
