--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -6,12 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Iconos-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="../assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
     <link rel="shortcut icon" href="../assets/img/logo-cenigaa.ico">
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
+
     <!--CSS-->
     <link rel="stylesheet" href="../assets/css/jovenesInvestigadores.css">
     <title>Jóvenes Investigadores</title>
