--- a/pages/jovenesInvestigadores.html
+++ b/pages/jovenesInvestigadores.html
@@ -50,12 +50,34 @@
                 </ul>
               </li>
               <li class="has-children">
-                <a href="../pages/CteI.html"><span>CTeI</span></a>
+                <a href="#"><span>CTeI</span></a>
                 <ul class="dropdown arrow-top">
-                  <li><a href="../pages/proyectos.html">I+D+i</a></li>
-                  <li><a href="../pages/academics.html">Academics</a></li>
-                  <li><a href="../pages/pasantes.html">Innovación</a></li>
-                  <li><a href="../pages/pasantes.html">INTECC</a></li>
+                  <li><a href="#">I+D+i</a></li>
+                  <li class="has-children">
+                    <a href="#">Academics for Scientist</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Master AGRO 4.0</a></li>
+                      <li><a href="#">Esp. Hidroinformática</a></li>
+                      <li><a href="#">Summer Research Camp</a></li>
+                      <li><a href="#">Science as Thinking</a></li>
+                      <li><a href="#">Bootcamps</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-children">
+                    <a href="#">Innovación Exponencial</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Emprendimientos de Base Tecnológica</a></li>
+                      <li><a href="#">Vigilancia Tecnológica & Benchmarking</a></li>
+                      <li><a href="#">Estudios Ambientales y Desarrollo de Productos</a></li>
+                    </ul>
+                  </li>
+                  <li class="has-children">
+                    <a href="#">INTECC</a>
+                    <ul class="dropdown">
+                      <li><a href="#">Vigilancia Tecnológica & Benchmarking</a></li>
+                      <li><a href="#">Estudios Ambientales y Desarrollo de Productos</a></li>
+                    </ul>
+                  </li>
                 </ul>
               </li>
               <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
