--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="#">Academics for Scientist</a>
                     <ul class="dropdown">
                       <li><a href="#">Master AGRO 4.0</a></li>
-                      <li><a href="#">Esp. Hidroinformática</a></li>
+                      <li><a href="https://corhuila.edu.co/carreras_profesional/especializacion-en-hidroinformatica-modalidad-virtual/">Esp. Hidroinformática</a></li>
                       <li><a href="#">Summer Research Camp</a></li>
                       <li><a href="#">Science as Thinking</a></li>
                       <li><a href="#">Bootcamps</a></li>
