--- a/pages/I+D+i.html
+++ b/pages/I+D+i.html
@@ -91,7 +91,7 @@
     <div class="container-card m-5">
       <div class="row">
         
-        <div class="col-md-6 offset-md-3">
+        <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
             <div class="card-body p-0 text-dark">
               <div class="position-relative p-3 pb-4 cardBg rounded">
@@ -136,7 +136,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 offset-md-3">
+        <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
             <div class="card-body p-0 text-dark">
               <div class="position-relative p-3 pb-4 cardBg rounded">
@@ -181,7 +181,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 offset-md-3">
+        <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
             <div class="card-body p-0 text-dark">
               <div class="position-relative p-3 pb-4 cardBg rounded">
@@ -226,7 +226,7 @@
           </div>
         </div>
 
-        <div class="col-md-6 offset-md-3">
+        <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
             <div class="card-body p-0 text-dark">
               <div class="position-relative p-3 pb-4 cardBg rounded">
