terminando de revisar y esperando a cargar informacion

--- a/pages/I+D+i.html
+++ b/pages/I+D+i.html
@@ -54,7 +54,7 @@
                         <a href="#">Academics for Scientist</a>
                         <ul class="dropdown">
                           <li><a href="#">Master AGRO 4.0</a></li>
-                          <li><a href="#">Esp. Hidroinformática</a></li>
+                          <li><a href="https://corhuila.edu.co/carreras_profesional/especializacion-en-hidroinformatica-modalidad-virtual/">Esp. Hidroinformática</a></li>
                           <li><a href="#">Summer Research Camp</a></li>
                           <li><a href="#">Science as Thinking</a></li>
                           <li><a href="#">Bootcamps</a></li>
@@ -93,7 +93,7 @@
         
         <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
-            <div class="card-body p-0 text-dark">
+            <div class="card-body p-0 text-white">
               <div class="position-relative p-3 pb-4 cardBg rounded">
               <div class="wrapper d-flex align-items-center">
                 <div>
@@ -138,8 +138,8 @@
 
         <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
-            <div class="card-body p-0 text-dark">
-              <div class="position-relative p-3 pb-4 cardBg rounded">
+            <div class="card-body p-0 text-white">
+              <div class="position-relative p-3 pb-4 cardBg-1 rounded">
               <div class="wrapper d-flex align-items-center">
                 <div>
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-3.jpg" alt="" width="150"/>
@@ -183,8 +183,8 @@
 
         <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
-            <div class="card-body p-0 text-dark">
-              <div class="position-relative p-3 pb-4 cardBg rounded">
+            <div class="card-body p-0 text-white">
+              <div class="position-relative p-3 pb-4 cardBg-2 rounded">
               <div class="wrapper d-flex align-items-center">
                 <div>
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-2.jpg" alt="" width="150"/>
@@ -228,8 +228,8 @@
 
         <div class="col-6 col-sm-6">
           <div class="card mt-5 border-0 bg-transparent">
-            <div class="card-body p-0 text-dark">
-              <div class="position-relative p-3 pb-4 cardBg rounded">
+            <div class="card-body p-0 text-white">
+              <div class="position-relative p-3 pb-4 cardBg-3 rounded">
               <div class="wrapper d-flex align-items-center">
                 <div>
                   <img class="img-fluid rounded-circle p-2" src="../assets/img/team/team-6.jpg" alt="" width="150"/>
@@ -315,6 +315,11 @@
     </footer>
 
       <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-      <script src="https://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+      <!-- <script src="https://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script> -->
+      <script src="../assets/js/main.js"></script>
+      <script src="../assets/js/jquery-3.3.1.min.js"></script>
+      <script src="../assets/js/popper.min.js"></script>
+      <script src="../assets/js/bootstrap.min.js"></script>
+      <script src="../assets/js/jquery.sticky.js"></script>
 </body>
 </html>
