--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -51,10 +51,10 @@
                   <li class="has-children">
                     <a href="../pages/CteI.html"><span>CTeI</span></a>
                     <ul class="dropdown arrow-top">
-                      <li><a href="../pages/proyectos.html">I+D+i</a></li>
-                      <li><a href="../pages/academics.html">Academics</a></li>
-                      <li><a href="../pages/pasantes.html">Innovación</a></li>
-                      <li><a href="../pages/pasantes.html">INTECC</a></li>
+                      <li><a href="../pages/I+D+i.html">I+D+i</a></li>
+                      <li><a href="#">Academics</a></li>
+                      <li><a href="#">Innovación</a></li>
+                      <li><a href="#">INTECC</a></li>
                     </ul>
                   </li>
                   <li><a href="../pages/servicios.html"><span>Servicios</span></a></li>
